# eel-891-intro-aprendizado-de-maquina

./: .gitignore  README.md  mlflow.sh  pyproject.toml  ui.sh
t1/: clean_test_ds.csv  column_selection.py  data_cleanup.py  data_treatment.py  target_encodings.json  train.py
t2/: bairro.json  data_cleanup.py  test_data.csv  train.py  train_ds.csv  transform.py
